--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
 
+<html>
+  <title>
+    First Websit 
+  </title>
+</html>
+<body>
+  <h1>my first website</h1>
+</body>
+</htmal>
+
+<style>
+  body { 
+    bachfround.color:gree;
+    coloe:#fff
+      text.align:center;
+  }
+</style>
+</html> 
+
+    
